# googleTestSamples

./: CMakeLists.txt  README.md
lib/x86_64-linux-gnu/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: GMockSample.cpp
